--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,6 +21,7 @@
       "react-native/split-platform-components": 2,
       "react-native/no-inline-styles": 2,
       "react-native/no-color-literals": 2,
+      "react/jsx-uses-vars": 1,
         "no-unused-vars": [
           "error", { "argsIgnorePattern": "^_" }
         ],
