--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "react": "16.0.0-alpha.6",
     "react-native": "0.43.3",
     "react-native-htmlview": "^0.9.0",
-    "react-navigation": "^1.0.0-beta.7"
+    "react-navigation": "git+https://github.com/react-community/react-navigation.git#e94c9c1"
   },
   "devDependencies": {
     "babel-eslint": "^7.2.2",
