--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,6 +22,7 @@
       "react-native/no-inline-styles": 2,
       "react-native/no-color-literals": 2,
       "react/jsx-uses-vars": 1,
+      "react/jsx-uses-react": 1,
         "no-unused-vars": [
           "error", { "argsIgnorePattern": "^_" }
         ],
