--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "react": "16.0.0-alpha.6",
     "react-native": "0.43.3",
+    "react-native-fabric": "^0.4.1",
     "react-native-htmlview": "^0.9.0",
     "react-navigation": "git+https://github.com/react-community/react-navigation.git#e94c9c1"
   },
